--- a/home-pi/src/app/round-table/notes/notes.component.html
+++ b/home-pi/src/app/round-table/notes/notes.component.html
@@ -1,8 +1,9 @@
 <div class="grid" style="font-family: fantasy; font-size: .8em">
   <div *ngIf="notesExist; then thenblock ;else elseblock"></div>
-  <ng-template #thenblock >
-    <div class="notecard" *ngFor="let el of notesArray; index as i;"><h6 style="grid-row:1/2">{{el.heading}}</h6><small style="grid-row:2/3">{{el.content}}</small>
-    <button style="grid-column:3/4" (click)="deletenote(notesArray.indexOf(el))"> delete note </button>
+  <ng-template #thenblock>
+    <div class="notecard" *ngFor="let el of notesArray; index as i;"><div class="note mt-2" style="border:azure solid 2px;padding:50px"><h6 style="grid-row:1/2">{{el.heading}}</h6><small style="grid-row:2/3">{{el.content}}</small><br>
+    <button class="del"  (click)="deletenote(notesArray.indexOf(el))"> delete note </button>
+    </div>
     </div>
   </ng-template>
   <ng-template #elseblock>
@@ -10,12 +11,12 @@
   </ng-template>
   <div *ngIf="addnotebox; then addnoteblock; else noneblock"></div>
   <ng-template #addnoteblock>
-    <div class="mb-2" style="background-color:blanchedalmond; border-radius: 5px; margin: 4px">
-    Heading:<input type="text" class="form-control" style="max-height: 1.35em" [(ngModel)]="newheading">
-    Content:<input type="text" class="form-control mb-2" style="max-height: 1.35em" [(ngModel)]="newcontent">
-    <button class="btn btn-info" style="padding:1px;border-radius: 0; max-height: 1.35em" (click)="addnote()">save note</button>
+    <div class="mb-2 notecard" style="background-color:blanchedalmond; border-radius: 5px; margin: 4px">
+    Heading:<textarea class="form-control" style="max-height: 1.35em" [(ngModel)]="newheading"></textarea>
+    Content:<textarea class="form-control" style="max-height: 1.35em" [(ngModel)]="newcontent"></textarea>
+    <button class="btn btn-info btn-sm" style=" border-radius:0;box-shadow:grey 1px 1px 1px; " (click)="addnote()">save note</button>
     </div>
   </ng-template>
   <ng-template #noneblock></ng-template>
-  <button class="btn btn-primary" (click)="add()">Add note</button>
+  <button class="btn btn-primary btn-sm mt-2" style="border-radius:0;box-shadow:grey 1px 1px 1px" (click)="add()">Add note</button>
 </div>
