--- a/home-pi/src/app/round-table/round-table/round-table.component.css
+++ b/home-pi/src/app/round-table/round-table/round-table.component.css
@@ -1,4 +1,4 @@
-div.container{
+div.container-fluid{
 display: grid;
 grid-template: 1.5fr 1fr/repeat(3,1fr);
 min-height: 300px;
@@ -7,7 +7,8 @@ grid-column-gap: 2px;
 grid-row-gap: 2px;
 }
 .wall{
-    background-color: aqua;
+    background-color:lightblue;
     border-radius: 5px;
     min-height: 200PX;
+    box-shadow: black 2px 2px 5px;
 }
