backend changed to remote from local

--- a/home-pi/src/app/round-table/hc/hc.component.html
+++ b/home-pi/src/app/round-table/hc/hc.component.html
@@ -1,3 +1,14 @@
-<p>
-  hc works!
-</p>
+<div class="container" style="font-family:fantasy">
+<button class="col-sm-6" (click)="switchon()">
+<figure>
+  <img src="" alt="switchon">
+  <figcaption>switchon</figcaption>
+</figure>
+</button>
+<button class="col-sm-6" (click)="switchoff()">
+<figure>
+  <img src="" alt="switchoff">
+  <figcaption>switchoff</figcaption>
+</figure>
+</button>
+</div>
