--- a/home-pi/src/app/round-table/hc/hc.component.html
+++ b/home-pi/src/app/round-table/hc/hc.component.html
@@ -1,13 +1,13 @@
 <div class="container" style="font-family:fantasy">
 <button class="col-sm-6" (click)="switchon()">
 <figure>
-  <img src="" alt="switchon">
+  <img src="../../../assets/bulbon.jpg" alt="switchon">
   <figcaption>switchon</figcaption>
 </figure>
 </button>
 <button class="col-sm-6" (click)="switchoff()">
 <figure>
-  <img src="" alt="switchoff">
+  <img src="../../../assets/bulboff.jpg" alt="switchoff">
   <figcaption>switchoff</figcaption>
 </figure>
 </button>
